--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Ignore SSH keys
+authorized_keys
+authorized_keys.pub
+id_ed25519
+id_ed25519.pub
+firebase-chatbot
+
